# rasterkit

./: .gitignore  Cargo.toml  LICENSE  README.md  geotiff_tags.toml  output.txt
src/: api.rs  lib.rs  main.rs
src/commands/: analyze_command.rs  command_traits.rs  convert_command.rs  extract_command.rs  mod.rs
src/compression/: converter.rs  deflate.rs  factory.rs  handler.rs  mod.rs  uncompressed.rs  zstd.rs
src/coordinate/: bbox.rs  crs.rs  mod.rs  point.rs  transform.rs
src/extractor/: array_strategy.rs  extractor_strategy.rs  mod.rs  region.rs  strip_reader.rs  tiff_strategy.rs  tile_reader.rs
src/io/: byte_order.rs  mod.rs  seekable.rs
src/tiff/: builder.rs  colormap.rs  constants.rs  errors.rs  geo_key_parser.rs  geotags.rs  ifd.rs  mod.rs  reader.rs  tests.rs  types.rs  validation.rs
src/tiff/builders/: basic_tags.rs  geo_tags.rs  metadata_tags.rs  mod.rs  writer.rs
src/tiff/tests/: byte_order_tests.rs  test_utils.rs  types_tests.rs
src/utils/: byte_order_utils.rs  colormap_utils.rs  coordinate_transformer.rs  coordinate_utils.rs  filter_utils.rs  format_utils.rs  ifd_utils.rs  image_extraction_utils.rs  logger.rs  mask_utils.rs  mod.rs  progress.rs  reference_utils.rs  reprojection_utils.rs  string_utils.rs  tag_utils.rs  tiff_code_translators.rs  tiff_extraction_utils.rs  tiff_utils.rs  write_utils.rs  xml_utils.rs
tests/: integration_test.rs
